--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "pkgname",
-  "version": "0.0.1",
-  "description": "TODO: FILL IN",
+  "name": "testonly",
+  "version": "0.1.0",
+  "description": "mark .js/.ts files as testonly by importing this package",
   "repository": {
     "type": "git",
     "url": "git+"
@@ -20,6 +20,8 @@
     }
   },
   "files": [
+    "index.mjs",
+    "index.cjs.js",
     "dist/**/*",
     "README.md",
     "CHANGELOG.md"
@@ -28,6 +30,7 @@
     "node": ">=22.0.0"
   },
   "scripts": {
+    "e2e": "./e2e.test.sh",
     "test": "vitest",
     "test:run": "vitest run",
     "test:watch": "vitest watch",
@@ -35,7 +38,7 @@
     "typecheck": "tsc --noEmit",
     "lint": "eslint && prettier --check src",
     "format": "prettier --write src && eslint --fix",
-    "build": "npm run build",
+    "build": "npm run build:vite && ./legacy_hints.sh && npm run e2e",
     "build:vite": "rm -rf dist && vite build",
     "build:tsc": "rm -rf dist && tsc -p tsconfig.build.types.json && tsc -p tsconfig.build.esm.json && tsc-alias -p tsconfig.build.esm.json && tsc -p tsconfig.build.cjs.json && tsc-alias -p tsconfig.build.cjs.json && find dist/cjs -name '*.js' -exec mv {} {}.cjs \\;",
     "check": "npm run typecheck && npm run lint && npm run test:run"
@@ -60,6 +63,9 @@
     "vitest": "^3.2.4"
   },
   "keywords": [
-    "TODO: FILL IN"
+    "testonly",
+    "test-only",
+    "test",
+    "typescript"
   ]
 }
