--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@drdxk/testonly",
+  "name": "mark-testonly",
   "version": "0.1.0",
   "description": "mark .js/.ts files as testonly by importing this package",
   "repository": {
